--- a/OOP_Practice/week04/week04.vcxproj.filters
+++ b/OOP_Practice/week04/week04.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="20251001_p01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="p_02.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
