중간고사 문제2, 문제3

--- a/OOP_Practice/Midterm_1,2/Midterm_1,2.vcxproj
+++ b/OOP_Practice/Midterm_1,2/Midterm_1,2.vcxproj
@@ -125,9 +125,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="q2.cpp" />
+    <ClCompile Include="q3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="q2.h" />
+    <ClInclude Include="q3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
