--- a/OOP_Practice/Midterm_1,2/Midterm_1,2.vcxproj.filters
+++ b/OOP_Practice/Midterm_1,2/Midterm_1,2.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="q3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="q2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="q3.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
